Fix: Prevent zoom on mobile input focus

--- a/random/v3/css/styles.css
+++ b/random/v3/css/styles.css
@@ -30,3 +30,7 @@ Design a landing page before entering with basic information about yourself */
     float: left;
     font-size: 2em;
 }
+
+input[type="number"] {
+    font-size: 16px;
+}
